Implemented dependency injection for the provider as it was getting hard to mock things
