# api/store.py
@@ -1,36 +1,22 @@
+from flask_injector import inject
+from providers.store_provider import StoreProvider
 
+@inject
+def get(store_provider: StoreProvider):
+  return store_provider.get_status()
 
-store_objs = {
-  "a_status": 0,
-  "another_status": 10,
-}
-
-orders = []
-
-
-def get():
-  return store_objs 
-
-def get_order(order):
-  orders.append(order)
+@inject
+def post_order(store_provider: StoreProvider, order):
+  store_provider.add_order(order)
   return order
 
-def get_all_orders():
-  return orders
-
-def find_order_by_id(order_id):
-  for order in get_all_orders():
-    if (order['id'] == order_id):
-      return order
-
-  return None
-
-
-def get_order_by_id(order_id):
-  order = find_order_by_id(order_id)
+@inject
+def get_order_by_id(store_provider: StoreProvider, order_id):
+  order = store_provider.find_order_by_id(order_id)
   if order:
     return order, 200
 
   return None, 404 
 
-
+def delete_order_by_id(order_id):
+  pass 
